# InteractionModels_DemoCode

./: CMakeLists.txt  Doxyfile.in  cmake_clean.sh
src/ART-Server/: .gitignore  ART-Server.pro  CMakeLists.txt  art.cpp  art.h  art.ui  artconfiguration.cpp  artconfiguration.h  artconfigurationpage.cpp  artconfigurationpage.h  artconverter.cpp  artconverter.h  artdatabase.cpp  artdatabase.h  artkinectbase.cpp  artkinectbase.h  artkinectcalibrationwidget.cpp  artkinectcalibrationwidget.h  artkinectcalibrationwidget.ui  artkinectv1.cpp  artkinectv1.h  artkinectv2.cpp  artkinectv2.h  artkinectwidget.cpp  artkinectwidget.h  artnetwork.cpp  artnetwork.h  artnetworkclient.cpp  artnetworkclient.h  artringbuffer.cpp  artringbuffer.h  main.cpp
src/iModGripper/: CMD_Interface.cpp  CMakeLists.txt  c_interface.cpp  unitTest.cpp
src/iModGripper/gripper/: GripperController.cpp  GripperController.h
src/iModHaptic/: BlenderController.cpp  BlenderController.h  BulletCInterface.cpp  BulletObject.cpp  BulletObject.h  CMakeLists.txt  CollisionBody.cpp  CollisionBody.h  CollisionDetection.cpp  CollisionDetection.h  HapticFeedback.cpp  HapticFeedback.h  HapticFeedbackController.cpp  HapticFeedbackController.h  ObjTransform.cpp  ObjTransform.h  Udp.cpp  Udp.h  Visual.cpp  Visual.h  Wii.cpp  Wii.h  bluetooth.h  camera.cpp  iModHapticUnitTest.cpp
src/iModMiddleware/iModBaxter/: Baxter.cpp  Baxter.h  BaxterCamera_interface.robdef  BaxterJoint.robdef  BaxterPeripheral_interface.robdef  CMakeLists.txt  DummyBaxterService.py  iModBaxterUnitTest.cpp  robot__service__camera.h  robot__service__camera_stubskel.cpp  robot__service__camera_stubskel.h  robot__service__joint.h  robot__service__joint_stubskel.cpp  robot__service__joint_stubskel.h  robot__service__peripheral.h  robot__service__peripheral_stubskel.cpp  robot__service__peripheral_stubskel.h
src/iModMiddleware/iModBaxter/RobotRaconteur-0.5-OSX/: LICENSE.txt
src/iModMiddleware/iModBaxter/RobotRaconteur_MinimalC++Example/: DataServer.robdef  Project.cbp  service__data_stubskel.cpp
src/iModMiddleware/iModBaxter/Robotcatonteur_MinimalExample/: CMakeLists.txt  DataClient.py  DataServer.py  DataServerClient.cpp  service__data.h  service__data_stubskel.h
src/iModMiddleware/iModControll/: CMakeLists.txt  iModControll.pro  imodcontrol.cpp  imodcontrol.h  imodcontrol_cinterface.cpp  imodcontroll_global.h  imodkinectv2.cpp  imodkinectv2.h  imodnetwork.cpp  imodnetwork.h  imodobjectdetection.cpp  imodobjectdetection.h
src/iModMiddleware/iModDaemon/: CMakeLists.txt  iModDaemon.pro  imodart.cpp  imodart.h  imodartclient.cpp  imodartclient.h  imodcontrol_daemon.cpp  imodcontrol_daemon.h  imoddaemon.cpp  imoddaemon.h  imoddatabase.cpp  imoddatabase.h  imodmathutils.cpp  imodmathutils.h  imodringbuffer.cpp  imodringbuffer.h  imodutile.cpp  imodutile.h  main.cpp
src/iModMiddleware/iModDaemon/Kinect/: imodkinect.cpp  imodkinect.h  imodkinecttypes.h  kvkinect.cpp  kvkinect.h  kvmainwindow.cpp  kvmainwindow.h
src/iModMiddleware/iModDaemon/Robot/: imodftsensor.cpp  imodftsensor.h  imodgripper.cpp  imodgripper.h  (+4 more)
src/iModMiddleware/iModView/: CMakeLists.txt  iModTesting.pro  imodview.cpp  imodview.h  imodview.ui  main.cpp
src/iModNao/: CMakeLists.txt  NaoController.cpp  NaoController.h  NaoControllerCInterface.cpp
src/iModNao/naoBones/: BoneFinder.cpp  BoneFinder.h  BoneGen.cpp  BoneGen.h  CylinderCreator.cpp  CylinderCreator.h  LineCreator.cpp  LineCreator.h  Nao.osgt  SkeletonFinder.cpp  SkeletonFinder.h  vhuman.cpp
src/iModOSG/: .gitignore  BoneDefinitions.h  BoneFinder.cpp  BoneGen.cpp  BoneGen.h  CBandNaoRobotCreator.cpp  CBandNaoRobotCreator.h  CMakeLists.txt  CaveDummy.h  CylinderCreator.cpp  CylinderCreator.h  HelperClassesAndFunctions.cpp  HelperClassesAndFunctions.h  InteractionROI.h  InteractionRoi.cpp  LineCreator.cpp  LineCreator.h  MyInteractionLineMesh.cpp  MyInteractionLineMesh.h  MyInteractionLineMeshView.cpp  MyInteractionLineMeshView.h  MyInteractionMeshController.cpp  MyInteractionMeshController.h  MyInteractionMeshModel.cpp  MyInteractionMeshModel.h  MyInteractionMeshView.cpp  MyInteractionMeshView.h  MyInteractionTetrahedronMesh.cpp  MyInteractionTetrahedronMesh.h  MyInteractionTetrahedronMeshView.cpp  MyInteractionTetrahedronMeshView.h  MyInteractionTriangleMesh.cpp  MyInteractionTriangleMesh.h  MyInteractionTriangleMeshView.cpp  MyInteractionTriangleMeshView.h  NodeVisitorCallbackRunner.h  SwitchNaoKeyboardEventHandler.h  VirtualHuman.cpp  VirtualHuman.h  VirtualHumanNao.cpp  (+6 more)
src/iModOSG/CaveAndLocalWrapper/: CaveAndLocalWrapper.cpp  CaveAndLocalWrapper.h  Readme.txt
src/iModOSG/Nao/: Robot.cpp  Robot.h  RobotPart.cpp  RobotPart.h
src/iModOSG/_not_used/: BoneFinder.h  GeodeFinder.cpp  GeodeFinder.h  LightSourceFinder.cpp  LightSourceFinder.h  SkeletonFinder.cpp  SkeletonFinder.h
src/iModTracker/: ART.cpp  ART.h  ARTCInterface.cpp  CMakeLists.txt  DTrackSDK.cpp  DTrackSDK.hpp  Target.cpp  Target.h  example_with_dtrack2_remote_control.example  iModTracker.pro  iModTrackerUnitTest.cpp
src/iModTracker/Lib/: DTrackDataTypes.h  DTrackNet.cpp  DTrackNet.h  DTrackParse.cpp  DTrackParse.hpp  DTrackParser.cpp  DTrackParser.hpp
src/iModWii/: CMakeLists.txt  EventContainer.cpp  EventContainer.h  Wii.cpp  Wii.h  Wii_CInterface.cpp  iModWii.pro  iModWiiUnitTest.cpp
src/interactionMesh/: BlenderController.cpp  BlenderController.h  CMakeLists.txt  Controller.cpp  Controller.h  InteractionMeshController.cpp  InteractionMeshController.h  InteractionMeshControllerCInterface.cpp  InteractionMeshControllerNetwork.cpp  InteractionMeshControllerNetwork.h  MatlabController.cpp  MatlabController.h  MatlabInstance.cpp  MatlabInstance.h  MessageConverter.cpp  MessageConverter.h  Pose.cpp  Pose.h  PoseContainer.cpp  PoseContainer.h  TimedPoseContainer.cpp  TimedPoseContainer.h  Timer.cpp  Timer.h  iModMeshUnitTest.cpp  iModMeshUnitTest2.cpp  interactionMesh.pro  interactionMeshUT.pro
src/utils/: CMakeLists.txt  Configuration.cpp  Configuration.h  LogUnitTest.cpp  Timer.h  iModUtils.pro  notify.c  notify.h  notify_windows.cpp  notify_windows.h
(+59 files in other folders)
